read input files once, use new switch stmts, convert to records