@@ -1,5 +1,6 @@
 package org.base.advent.code2017;
 
+import lombok.Getter;
 import org.apache.commons.lang3.tuple.Pair;
 import org.base.advent.Solution;
 
@@ -7,7 +8,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
 import java.util.TreeSet;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 
@@ -15,11 +15,9 @@ import java.util.stream.Stream;
  * <a href="https://adventofcode.com/2017/day/06">Day 06</a>
  */
 public class Day06 implements Solution<List<Integer>> {
-
-    @Override
-    public List<Integer> getInput(){
-        return Stream.of(readInput("/2017/input06.txt").split("\\s")).map(Integer::parseInt).collect(Collectors.toList());
-    }
+    @Getter
+    private final List<Integer> input =  Stream.of(readInput("/2017/input06.txt")
+            .split("\\s")).map(Integer::parseInt).toList();
 
     @Override
     public Object solvePart1() {
